--- a/app/src/main/res/layout/activity_add_lunch.xml
+++ b/app/src/main/res/layout/activity_add_lunch.xml
@@ -121,15 +121,18 @@
     </LinearLayout>
 
     <!-- Confirm button -->
-    <Button
+    <android.widget.Button
+        android:background="@drawable/button_background"
+        android:textColor="#FFFFFF"
+        android:padding="12dp"
         android:id="@+id/confirmButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:backgroundTint="#000000"
+
         android:text="Confirm"
         android:textSize="16sp"
-        android:textColor="#FFFFFF"
+
         android:drawableEnd="@drawable/ic_arrow_right_white"
         android:gravity="center" />
 
