--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -3,7 +3,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="8dp"
-    android:background="#FFFFFF">
+    android:background="#A6C8E0">
 
     <TextView
         android:id="@+id/textViewActivityName"
