--- a/app/src/main/res/layout/activity_sleep_log_item.xml
+++ b/app/src/main/res/layout/activity_sleep_log_item.xml
@@ -6,7 +6,7 @@
     android:layout_marginTop="4dp"
     android:layout_marginEnd="8dp"
     android:layout_marginBottom="12dp"
-    android:background="#FFFFFF"
+    android:background="#A6C8E0"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp"> <!-- Màu nền trắng cho CardView -->
 
