--- a/app/src/main/res/layout/dialog_add_food.xml
+++ b/app/src/main/res/layout/dialog_add_food.xml
@@ -1,9 +1,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:background="#A6C8E0"
     android:orientation="vertical"
-    android:padding="16dp"
-    android:background="#FFFFFF">
+    android:padding="16dp">
 
     <EditText
         android:id="@+id/editTextFoodName"
@@ -40,14 +40,14 @@
         android:inputType="numberDecimal" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:padding="12dp"
-        android:layout_margin="12dp"
-        android:background="@drawable/button_background"
-        android:textColor="#FFFFFF"
         android:id="@+id/buttonSaveFood"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="12dp"
+        android:background="@drawable/button_background"
+        android:padding="12dp"
         android:text="Lưu thực phẩm"
-        android:layout_gravity="center" />
+        android:textColor="#FFFFFF" />
 
 </LinearLayout>
