--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,13 +26,18 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fillViewport="true">
+
             <GridLayout
                 android:layout_width="358dp"
                 android:layout_height="686dp"
                 android:layout_gravity="center"
                 android:columnCount="2"
                 android:padding="16dp"
-                android:rowCount="4"
+                android:rowCount="6"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -242,8 +247,87 @@
                         android:padding="4dp"
                         android:text="Get Advice"
                         android:textColor="#ffffff" />
+
                 </FrameLayout>
+
+                <FrameLayout
+                    android:id="@+id/btnSync"
+                    android:layout_width="169dp"
+                    android:layout_height="wrap_content"
+                    android:layout_row="4"
+                    android:layout_column="0"
+                    android:layout_margin="0dp">
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="152dp"
+                        android:src="@drawable/sync"
+                        android:scaleType="fitCenter" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom|center_horizontal"
+                        android:background="#66000000"
+                        android:text="Sync Data"
+                        android:textColor="#ffffff"
+                        android:gravity="center"
+                        android:padding="4dp" />
+                </FrameLayout>
+
+                <FrameLayout
+                    android:id="@+id/btnShare"
+                    android:layout_width="169dp"
+                    android:layout_height="wrap_content"
+                    android:layout_row="4"
+                    android:layout_column="1"
+                    android:layout_margin="0dp">
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="152dp"
+                        android:src="@drawable/share"
+                        android:scaleType="centerCrop" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom|center_horizontal"
+                        android:background="#66000000"
+                        android:text="Share Plan"
+                        android:textColor="#ffffff"
+                        android:gravity="center"
+                        android:padding="4dp" />
+                </FrameLayout>
+
+                <!-- New FrameLayout for Expert Advice -->
+                <FrameLayout
+                    android:id="@+id/btnExpert"
+                    android:layout_width="169dp"
+                    android:layout_height="wrap_content"
+                    android:layout_row="5"
+                    android:layout_column="0"
+                    android:layout_margin="0dp">
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="152dp"
+                        android:src="@drawable/expert"
+                        android:scaleType="centerInside" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom|center_horizontal"
+                        android:background="#66000000"
+                        android:text="Expert Advice"
+                        android:textColor="#ffffff"
+                        android:gravity="center"
+                        android:padding="4dp" />
+                </FrameLayout>
+
             </GridLayout>
+            </ScrollView>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
