--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,8 @@
     <color name="colorPrimary">#2196F3</color> <!-- Example blue color -->
     <color name="colorPrimaryDark">#1976D2</color> <!-- Darker shade -->
     <color name="colorAccent">#FF4081</color> <!-- Accent color -->
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="salmon">#FF9999 </color>
     <!-- Add any other colors you need -->
 </resources>
