--- a/app/src/main/res/layout/activity_userinf.xml
+++ b/app/src/main/res/layout/activity_userinf.xml
@@ -111,7 +111,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:background="@drawable/edit_text_background"
-        android:hint="Vòng eo (cm)"
+        android:hint="Vòng cổ (cm)"
         android:inputType="numberDecimal"
         android:padding="12dp"
         app:layout_constraintEnd_toEndOf="parent"
